@@ -1,7 +1,7 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
 from itertools import chain
-from trytond.model.fields.field import Field
+from trytond.model.fields.field import Field, size_validate
 from trytond.transaction import Transaction
 from trytond.pool import Pool
 
@@ -13,9 +13,10 @@ class Many2Many(Field):
     _type = 'many2many'
 
     def __init__(self, relation_name, origin, target, string='', order=None,
-            datetime_field=None, help='', required=False, readonly=False,
-            domain=None, states=None, on_change=None, on_change_with=None,
-            depends=None, order_field=None, context=None, loading='lazy'):
+            datetime_field=None, size=None, help='', required=False,
+            readonly=False, domain=None, states=None, on_change=None,
+            on_change_with=None, depends=None, order_field=None, context=None,
+            loading='lazy'):
         '''
         :param relation_name: The name of the relation model
             or the name of the target model for ModelView only.
@@ -42,7 +43,19 @@ class Many2Many(Field):
         self.target = target
         self.order = order
         self.datetime_field = datetime_field
+        self.__size = None
+        self.size = size
+
     __init__.__doc__ += Field.__init__.__doc__
+
+    def _get_size(self):
+        return self.__size
+
+    def _set_size(self, value):
+        size_validate(value)
+        self.__size = value
+
+    size = property(_get_size, _set_size)
 
     def get(self, ids, model, name, values=None):
         '''
